--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -1,79 +1,130 @@
-   :root
-   h1 {
-        text-align: center;
-        font-size: 4em;
-        color: rgb(37, 139, 54);
-        margin-bottom: .8em;
-        text-decoration: underline;
-      }
-      
-      table {
-        margin: .3em;
-        width: 290px;
-      }
-      
-      th {
-        padding: .2em;
-      }
-      
-      td {
-        padding-left: .5em;
-        padding-right: .5em;
-        border: 1px solid #900;
-        background-color: #ffc;
-      }
-      
-      #trHeader {
-        text-decoration: underline;
-        color: #900;
-      }
-      
-      .centerCell {
-        text-align: center;
-      }
-      .container { 
-        height: 200px;
-       
-        border: 8px solid green;
-      }
-      .sidenav {
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #008000;
-        overflow-x: hidden;
-        transition: 0.5s;
-        padding-top: 60px;
-      }
-      
-      .sidenav a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #FFFFFF
-      
-       
-        ;
-        display: block;
-        transition: 0.3s;
-      }
-      
-      .sidenav a:hover {
-        color: #000000;
-      }
-      
-      .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-      }
-      
-      @media screen and (max-height: 450px) {
-        .sidenav {padding-top: 15px;}
-        .sidenav a {font-size: 18px;}
-      }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+:root{
+  --bannerSize: 65px;
+}
+
+.bg{
+  background-color: rgb(237, 238, 247);
+}
+
+.banner{
+  position:sticky;
+  z-index: 9998;
+  background-color: white;
+  height: var(--bannerSize);
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid rgb(172, 172, 172);
+}
+
+.logo{
+  text-align: center;
+  margin: 0 auto;
+  vertical-align: middle;
+  line-height: var(--bannerSize);
+  width:fit-content;
+  height: fit-content;
+}
+
+.logo a{
+  color: #148314;
+  text-decoration:underline #148314 double;
+  font-size:200%;
+  font-family: 'Times New Roman';
+  font-family:var(--siteMainFont);
+  transition: 1s;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(#008000, rgb(98, 255, 145));
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #FFFFFF;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #000000;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.navButton{
+  font-size: 50px;
+  cursor: pointer;
+  vertical-align: middle;
+  line-height: calc(var(--bannerSize) - (0.2 * var(--bannerSize)));
+  padding-left: 5px;
+  float:left;
+}
+
+.content{
+  padding: 150px;
+  padding-top: 50px;
+}
+
+.about #about-one{
+  position: absolute;
+  right: 5%;
+  width: 40%;
+  height:720%;
+  padding-left: 0;
+  border: 1px dotted black;
+  background-image: linear-gradient(green, blue);
+}
+.about #about-two{
+  position: absolute;
+  left: 150px;
+  width: 40%;
+  padding-right: 0;
+  border: 1px dotted black;
+}
+
+
+
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
