--- a/alexandria/alexandria_site/static/css/stylesheet_old.css
+++ b/alexandria/alexandria_site/static/css/stylesheet_old.css
@@ -1,67 +1,78 @@
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-
-:root{
-    --headerColor: rgb(255, 255, 255);
-    --sideBarColor: rgb(75, 253, 149);
-    --bgColor: rgb(245, 249, 255);
-    --barSize: 150px;
-    --siteMainFont: 'Times New Roman'
-}
-
-.bg{
-    background-color: var(--bgColor);
-}
-
-.header {
-    background-color:var(--headerColor);
-    border: 1px solid;
-    height: var(--barSize);
-    width: 100%;
+h1 {
+    text-align: center;
+    font-size: 4em;
+    color: rgb(37, 139, 54);
+    margin-bottom: .8em;
+    text-decoration: underline;
+  }
+  
+  table {
+    margin: .3em;
+    width: 290px;
+  }
+  
+  th {
+    padding: .2em;
+  }
+  
+  td {
+    padding-left: .5em;
+    padding-right: .5em;
+    border: 1px solid #900;
+    background-color: #ffc;
+  }
+  
+  #trHeader {
+    text-decoration: underline;
+    color: #900;
+  }
+  
+  .centerCell {
+    text-align: center;
+  }
+  .container { 
+    height: 200px;
+   
+    border: 8px solid green;
+  }
+  .sidenav {
+    height: 100%;
+    width: 0;
     position: fixed;
-    z-index: 0;
+    z-index: 1;
     top: 0;
     left: 0;
-}
-
-.title{
-    text-align: center;
-    font-size:300%;
-    font-family: 'TImes New Roman';
-    font-family:var(--siteMainFont);
-}
-
-.sideBar{
-    width: 150px;
-    height: 100%;
-    padding: 10px;
-    border: 1px solid;
-    background-color: var(--sideBarColor);
-    border-top: none;
-    text-align: center;
-    position: relative;
-    margin-top: 0px;
-}
-
-.sideBarContent{
-
-}
+    background-color: #008000;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #FFFFFF
+  
+   
+    ;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #000000;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
