--- a/alexandria/alexandria_site/templates/alexandria_site/home_old.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/home_old.html
@@ -1,15 +1,45 @@
 {% load static %}
-<html lang="en">
-<head>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesheet.css' %}">
-    <title>Document</title>
-</head>
-<body class="bg">
-    <header class="header"><p class="title">Placeholder</p></header>
-    <div class="sideBar"><p class="sideBarContent">Lorem Ipsum...</p></div>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Projeto Alexandria</title>
+    <link href="{% static 'css/stylesheet_old.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+   
+  </head>
+  <body>
+    <main>
+        <h1 class="solid">Alexandria</h1>  
+    </main>
+  
+ <script src="{% static 'js/index.js' %}"></script>
+ 
 
-</body>
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+</div>
+
+<h2>Animated Sidenav Example</h2>
+<p>Click on the element below to open the side navigation menu.</p>
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
+</script>
+  </body>
 </html>
+}
