--- a/alexandria/alexandria_site/templates/alexandria_site/layout.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/layout.html
@@ -34,6 +34,8 @@
   </div>
 
   <div id="content" class="content">
+    <div id='shade'>
+    </div>
     {% block content %}
     {% endblock %}
   </div>
