--- a/alexandria/alexandria_site/templates/alexandria_site/layout.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/layout.html
@@ -27,8 +27,9 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="{%url 'home'%}">Inicio</a>
     <a href="{%url 'projects'%}">Projetos</a>
-    <a href="{%url 'about'%}">Sobre o Projeto SOLAR</a>
+    <a href="{%url 'about'%}">Sobre o Projeto SOMAR</a>
     <a href="{%url 'about_us'%}">Sobre Nós</a>
     <a href="{%url 'contact'%}">Contato</a>
   </div>
