changed around the color palette, changed around the database models, added an accordion element to the projects page linked with it, and added a large banner image to the homepage

--- a/alexandria/alexandria_site/templates/alexandria_site/layout.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/layout.html
@@ -13,9 +13,11 @@
 </head>
 
 <body class="bg">
+
+  <symbol class="navButton" onclick="openNav()">&#9776;</symbol>
+
   <header class="banner">
     <div>
-      <symbol class="navButton" onclick="openNav()">&#9776;</symbol>
       <div class="logo">
       <a id="logo" href="{% url 'home' %}" onmouseover="makeBig('220%')" onmouseleave="makeSmall('200%')">Alexandria</a>  
       </div>
@@ -33,7 +35,7 @@
     <a href="{%url 'contact'%}">Contato</a>
   </div>
 
-  <div id="content" class="content">
+  <div id="content" class="content" style="{{bgimg}}">
     <div id='shade'>
     </div>
     {% block content %}
