--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -27,21 +27,49 @@ body{
 
 :root{
   --bannerSize: 65px;
+
+  --shadow: #40513b3a;
+  --shadowStrong: #40513b8e;
+
+  --whiter: #f9faf4;
+  --white: #f8faf0;
+  --lighter: #EDF1D6;
+  --light: #9DC08B;
+
+  --medium: #609966;
+  --mutedMedium: #729676;
+
+  --dark: #40513B;
 }
 
 .bg{
-  background-color: rgb(252, 253, 255);
+  background-color: var(--white);
+}
+
+.title{
+  font-size:30px; 
+  text-align:center;
 }
 
 .banner{
-  position:sticky;
+  position:static;
   z-index: 9998;
-  background-color: white;
+  background-color: var(--whiter);
   height: var(--bannerSize);
   width: 100%;
   top: 0;
   left: 0;  
-  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.185);
+  box-shadow: 0px 2px 30px var(--shadow);
+}
+
+.bannerimg{
+  width: 100%;
+}
+
+.bannerimg img{
+  filter: brightness(50%);
+  width: 100%;
+  height: auto;
 }
 
 .logo{
@@ -54,8 +82,8 @@ body{
 }
 
 .logo a{
-  color: #148314;
-  text-decoration:underline #148314 double;
+  color: var(--dark);
+  text-decoration:underline var(--dark) double;
   font-size:200%;
   font-family: 'Times New Roman';
   font-family:var(--siteMainFont);
@@ -69,7 +97,7 @@ body{
   z-index: 9999;
   top: 0;
   left: 0;
-  background-image: linear-gradient(#008000, rgb(98, 255, 145));
+  background-image: linear-gradient(var(--medium), var(--shadowStrong));
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -97,6 +125,9 @@ body{
 }
 
 .navButton{
+  position: fixed;
+  color:#000000a1;
+  z-index: 9999;
   font-size: 50px;
   cursor: pointer;
   vertical-align: middle;
@@ -148,13 +179,13 @@ body{
 }
 
 .footer{
-  background-color: rgb(98, 255, 145);
-  box-shadow: 0px -2px 30px rgba(0, 0, 0, 0.185);
+  background-color: var(--medium);
+  box-shadow: 0px -2px 30px var(--shadow);
+  border-bottom: 3px solid var(--dark);
   width: 100%;
-  height: 50px;
+  height: 100px;
   bottom: 0;
   z-index: 998;
-  margin-top: 50px;
 }
 
 /* <- HOMEPAGE -> */
@@ -191,4 +222,60 @@ body{
   margin-top: 20%;
   width: 50%;
   float: left;
+}
+
+/* <- PROJECTS PAGE -> */
+
+.objectives{
+  border-right: 5px solid var(--shadowStrong);
+  max-width: 50%;
+  min-height: 100vh;
+  background-color: var(--light);
+}
+
+.objectives p{
+  padding: 20px;
+  padding-top: 0;
+}
+
+.objectives h1{
+  padding-top: 20px;
+}
+
+
+.accordion{
+  width: 100%;
+  height: 40px;
+  background-color: var(--mutedMedium);
+  border: none;
+  border-bottom: 1px dotted var(--dark);
+  outline: none;
+  transition: 0.1s;
+}
+
+.accordion:hover{
+  background-color: var(--lighter)
+}
+
+
+.panel{
+  max-height: 0;
+  background-color: var(--light);
+  border-bottom: 5px solid var(--mutedMedium);
+  overflow: hidden;
+  /*display: none;*/
+  transition: 1s;
+  transition-timing-function: ease-out;
+}
+
+.panel p{
+  padding: 20px;
+}
+
+.projects{
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  max-width: 80%;
+  
 }
