Added a news page with DB integrated posts

--- a/alexandria/alexandria_site/templates/alexandria_site/home.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/home.html
@@ -4,6 +4,8 @@
 <div class="bannerimg">
     <img src="../static/bannerimage.jpg"></img>
 </div>
+<br>
+<hr style="width:70%;">
 <div id="homepage">
     <div id="img-one"><img src="../static/homepage-1.jpg" style="max-width:100%; max-height:100%; box-shadow:5px 10px 20px #7a7a7a;"></img></div>
     <div id="txt-one"><h1 class="title">Lorem Ipsum</h1>
