--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -35,6 +35,7 @@ body{
   --white: #f8faf0;
   --lighter: #EDF1D6;
   --light: #9DC08B;
+  --greyish: #a7d8ab;
 
   --medium: #609966;
   --mutedMedium: #729676;
@@ -139,7 +140,7 @@ body{
 .content{
   flex: 1;
   top: 120px;
-  height: calc(100vh - 120px);
+  min-height: 100vh;
   max-width: 100%;
 }
 
@@ -183,9 +184,89 @@ body{
   box-shadow: 0px -2px 30px var(--shadow);
   border-bottom: 3px solid var(--dark);
   width: 100%;
-  height: 100px;
+  height: 80px;
   bottom: 0;
   z-index: 998;
+}
+
+.contentTitle{
+  font-size: 40px;
+  text-decoration: underline;
+}
+
+.contentBox{
+  width: 100%;
+  height: fit-content;
+  margin-top: 2%;
+}
+
+.contentBox #post{
+  cursor: pointer;
+  background-color: var(--greyish);
+  width: 70%;
+  transition: 0.5s;
+}
+.contentBox #post:hover{
+  width: 80%;
+}
+
+.contentBox #date{
+  font-size: small;
+  text-align: right;
+}
+
+.contentBox #title{
+  font-size: 30px;
+}
+
+.subContent{
+  min-height: 100vh;
+  width: 80%;
+  background-color: var(--white);
+  border: 1px outset var(--dark);
+  border-top: 5px solid var(--shadow);
+  border-bottom: 5px solid var(--shadow);
+
+}
+
+.rightMargin{
+  margin-right: 2%;
+}
+
+
+.leftMargin{
+  margin-left: 2%;
+}
+
+.rightleftMargin{
+  margin-right: 2%;
+  margin-left: 2%;
+}
+
+.rightPadding{
+  padding-right: 2%;
+}
+
+
+.leftPadding{
+  padding-left: 2%;
+}
+
+.rightleftPadding{
+  padding-right: 2%;
+  padding-left: 2%;
+}
+
+.center{
+  margin: 0 auto;
+}
+
+.center p, small, h1, h2, h3, h4, h5, h6{
+  text-align: center;
+}
+
+.topMargin{
+  margin-top: 2%;
 }
 
 /* <- HOMEPAGE -> */
