--- a/alexandria/alexandria_site/templates/alexandria_site/home.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/home.html
@@ -1,27 +1,13 @@
 {% extends 'alexandria_site/layout.html' %}
 
 {%block content%}
-<div class="bannerimg">
+<div class="home-banner">
     <img src="../static/bannerimage.jpg"></img>
 </div>
 <br>
 <hr style="width:70%;">
-<div id="homepage">
-    <div id="img-one"><img src="../static/homepage-1.jpg" style="max-width:100%; max-height:100%; box-shadow:5px 10px 20px #7a7a7a;"></img></div>
-    <div id="txt-one"><h1 class="title">Lorem Ipsum</h1>
-        <p>                
-            <br><br>Proin at nisi nec eros tincidunt fermentum commodo sed tellus. Nam urna sapien, mollis vel rhoncus ac, convallis eget eros. In interdum, diam interdum tempus congue, dui nunc euismod erat, ullamcorper malesuada justo orci at risus. Morbi vehicula est metus. Quisque eu egestas magna. Aliquam suscipit neque eu turpis dictum, sed pretium est congue. In vel congue lectus. Fusce commodo odio in nisi viverra, scelerisque tincidunt augue pellentesque. Curabitur semper, tortor tincidunt vestibulum interdum, ligula lectus auctor nisi, dapibus maximus nunc dolor vitae sem. Sed magna neque, aliquam non scelerisque et, dignissim non ante. Quisque lacus ipsum, tincidunt placerat nibh at, bibendum eleifend lectus. Sed ut lectus auctor diam elementum malesuada tristique sed metus. Vestibulum scelerisque rutrum massa a scelerisque. Ut ornare diam in nisl luctus semper.    
-            <br><br>Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum congue hendrerit maximus. Vivamus quis risus elit. Vivamus vestibulum rutrum ligula, in consectetur tellus ultricies et. Aenean fringilla auctor lacus, hendrerit porta turpis elementum in. Donec et augue sit amet libero viverra convallis. Etiam feugiat, nunc et facilisis viverra, velit risus sollicitudin diam, at congue urna ex sit amet orci. In et sapien nisi. Quisque consectetur lacus a ex varius, eu auctor est tristique. </p>
-            <br><a href="{% url 'about'%}"> Mais sobre o Projeto SOMAR </a>
-        </p>
-    </div>
-    <div id="img-two"><img src="../static/homepage-2.jpg" style="max-width:100%; max-height:100%; box-shadow:-5px 10px 20px #7a7a7a;"></img></div>
-    <div id="txt-two"><h1>Igni Amet Mar</h1>
-        <p>                
-            <br><br>Proin at nisi nec eros tincidunt fermentum commodo sed tellus. Nam urna sapien, mollis vel rhoncus ac, convallis eget eros. In interdum, diam interdum tempus congue, dui nunc euismod erat, ullamcorper malesuada justo orci at risus. Morbi vehicula est metus. Quisque eu egestas magna. Aliquam suscipit neque eu turpis dictum, sed pretium est congue. In vel congue lectus. Fusce commodo odio in nisi viverra, scelerisque tincidunt augue pellentesque. Curabitur semper, tortor tincidunt vestibulum interdum, ligula lectus auctor nisi, dapibus maximus nunc dolor vitae sem. Sed magna neque, aliquam non scelerisque et, dignissim non ante. Quisque lacus ipsum, tincidunt placerat nibh at, bibendum eleifend lectus. Sed ut lectus auctor diam elementum malesuada tristique sed metus. Vestibulum scelerisque rutrum massa a scelerisque. Ut ornare diam in nisl luctus semper.    
-            <br><br>Morbi sed vehicula eros. Nulla vulputate lorem hendrerit feugiat porta. Fusce bibendum magna nunc, a bibendum mauris feugiat ac. Proin ac mattis est. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum congue hendrerit maximus. Vivamus quis risus elit. Vivamus vestibulum rutrum ligula, in consectetur tellus ultricies et. Aenean fringilla auctor lacus, hendrerit porta turpis elementum in. Donec et augue sit amet libero viverra convallis. Etiam feugiat, nunc et facilisis viverra, velit risus sollicitudin diam, at congue urna ex sit amet orci. In et sapien nisi. Quisque consectetur lacus a ex varius, eu auctor est tristique. </p>
-        </p>
-    </div>
+<div class="sub-content">
+
     
 </div>
 {%endblock%}
