--- a/alexandria/alexandria_site/templates/alexandria_site/about.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/about.html
@@ -1,8 +1,8 @@
 {% extends 'alexandria_site/layout.html' %}
 
 {% block content %}
-    <div class="about"><div id="img"><img src="../static/stock.jpg"></img></div> 
-        <div id="txt">
+    <div class="about"><div class="image"><img src="../static/stock.jpg"></img></div> 
+        <div class="text">
             <h1 style="font-size:50px; text-align:center;">Lorem Ipsum</h1>
             <br><br>
             <p>
