--- a/alexandria/alexandria_site/templates/alexandria_site/layout.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/layout.html
@@ -12,9 +12,9 @@
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
-<body class="bg">
+<body class="page-bg">
 
-  <symbol class="navButton" onclick="openNav()">&#9776;</symbol>
+  <symbol class="nav-button" onclick="openNav()">&#9776;</symbol>
 
   <header class="banner">
     <div>
@@ -26,7 +26,7 @@
   
   <script src="{% static 'js/index.js' %}"></script>
 
-  <div id="mySidenav" class="sidenav">
+  <div id="layoutSidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="{%url 'home'%}">Inicio</a>
     <a href="{%url 'projects'%}">Projetos</a>
@@ -36,12 +36,10 @@
     <a href="{%url 'contact'%}">Contato</a>
   </div>
 
-  <div id="content" class="content" style="{{bgimg}}">
     <div id='shade'>
     </div>
     {% block content %}
     {% endblock %}
-  </div>
 
   <footer class="footer"></footer>
 </body>
