--- a/alexandria/alexandria_site/templates/alexandria_site/layout.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/layout.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Alexandria</title>   
+  <title>Alexandria {{title}}</title>   
 
   <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
