--- a/alexandria/alexandria_site/templates/alexandria_site/news.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/news.html
@@ -11,11 +11,13 @@
         {% for post in posts %}
         <div onclick="location.href='#'" id="post"  class="post center">
             <hr style="width: 70%;">
-            <p id="title" class="center">{{post.title}}</p>
-            <br>
-            <p id="post-content" class="center">{{post.content}}</p>
-            <br>
-            <p id="date"> Date Posted: {{post.date_posted}}&#160 &#160</p>
+            <div style="max-width: 50vw; margin: 0 auto;">
+                <p id="title" class="center">{{post.title}}</p>
+                <br>
+                <p id="post-content" class="center">{{post.content}}</p>
+                <br>
+                <p id="date"> Date Posted: {{post.date_posted}}&#160 &#160</p>
+            </div>
             <hr style="width: 70%;">
         </div>
         {% endfor %}
