--- a/alexandria/alexandria_site/static/css/stylesheet.css
+++ b/alexandria/alexandria_site/static/css/stylesheet.css
@@ -26,7 +26,7 @@ body{
 }
 
 :root{
-  --bannerSize: 65px;
+  --bannerSize: 10vh;
 
   --shadow: #40513b3a;
   --shadowStrong: #40513b8e;
@@ -81,22 +81,32 @@ body{
 }
 
 .logo{
-  text-align: center;
   margin: 0 auto;
-  vertical-align: middle;
-  line-height: var(--bannerSize);
-  width:fit-content;
-  height: fit-content;
+  margin-top: 0.5vh;
+  width: 15vw;
+  height: 100%;
+  transition: 0.2s;
 }
 
-.logo a{
+.logo:hover{
+  width: 16vw;
+}
+
+.logo img{
+  width: 100%;
+  height: 100%;
+}
+
+
+/* DEPRECATED */
+/* .logo a{
   color: var(--dark);
   text-decoration:underline var(--dark) double;
   font-size:200%;
   font-family: 'Times New Roman';
   font-family:var(--siteMainFont);
   transition: 1s;
-}
+} */
 
 .sidenav {
   height: 100%;
@@ -112,9 +122,10 @@ body{
 }
 
 .sidenav a {
-  padding: 8px 8px 8px 32px;
+  padding: 8px 8px 8px 16px;
   text-decoration: none;
-  font-size: 25px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 150%;
   color: #FFFFFF;
   display: block;
   transition: 0.3s;
@@ -127,7 +138,7 @@ body{
 .sidenav .closebtn {
   position: absolute;
   top: 0;
-  right: 25px;
+  right: 10%;
   font-size: 36px;
   margin-left: 50px;
 }
@@ -201,9 +212,9 @@ body{
 }
 
 .content-section .title{
-  margin: 1em;
-  font-size: 2em;
-  text-decoration: underline;
+  margin: 3vh;
+  font-size: 3vw;
+  text-decoration: underline dotted 0.2vw;
 }
 
 .content-section .post{
@@ -223,7 +234,8 @@ body{
 }
 
 .content-section p{
-  font-size: 1.2em;
+  font-family:'Times New Roman', Times, serif;
+  font-size: 1.7vw;
 }
 
 .news{
@@ -284,33 +296,21 @@ body{
 
 }
 
-#txt-one{
-  margin-top: -20px;
-  margin-right: 50%;
-  padding: 25px;
-
+.link-button{
+  background-color: #f8faf050;
+  width: 70%; height: 10vh; 
+  font-size: 2.5vw; 
+  margin: 2vw; 
+  font-family: serif;
+  color:#363636;
+  border: 1px groove var(--shadow);
+  border-radius: 15px;
+  transition: 0.2s;
 }
 
-#img-one{
-
-  padding: 0;
-  width: 50%;
-  margin-left: 0;
-  margin-top: 50px;
-  float: right;
-
-}
-
-#txt-two{
-  margin-top: 20%;
-  margin-left: 50%;
-  padding: 25px;
-}
-
-#img-two{
-  margin-top: 20%;
-  width: 50%;
-  float: left;
+.link-button:hover{
+  background-color: var(--white);
+  cursor: pointer;
 }
 
 /* <- PROJECTS PAGE -> */
@@ -377,7 +377,7 @@ body{
 
 .accordion{
   font-family: 'Times New Roman', Times, serif;
-  font-size: 1.2em;
+  font-size: 1.7vw;
 }
 
 .projects{
