--- a/alexandria/alexandria_site/templates/alexandria_site/home.html
+++ b/alexandria/alexandria_site/templates/alexandria_site/home.html
@@ -1,13 +1,25 @@
 {% extends 'alexandria_site/layout.html' %}
 
 {%block content%}
-<div class="home-banner">
+<div class="home-banner" style="position:relative;">
+    <p style="font-weight: 0.01; font-style: italic; text-decoration: underline dotted 2.5px;font-size: 7vw; position: absolute; color: #e9ffde; top: 40%; left: 5%; z-index: 20; opacity: 70%; font-family: serif; ">
+        Fazendo + pelo futuro que queremos.
+    </p>
     <img src="../static/bannerimage.jpg"></img>
 </div>
-<br>
-<hr style="width:70%;">
-<div class="sub-content">
-
+<hr style="width:75%; border: none; height: 1px; background-color: black; margin-top: 5vh; margin-bottom: 5vh;">
+<div class="content">
+    <div class="content-section center" style="background-color: #9ad47d30; border-radius: 50px;">
+        <p class="title"> O que é o Programa SOMAR? </p>
+        <p style="font-size: 1.7vw; padding:20px;">O SOMAR é um programa de impacto social do Sistema Fecomércio-RS/Sesc/Senac. <br> Por meio dele, serão executados projetos que transformem realidades das comunidades em que o sistema atua e que contribuam para os Objetivos de Desenvolvimento Sustentável, da ONU e bandeiras Fecomércio.
+            Possuem como objetivo final a transformação de uma realidade vigente, sempre levando em consideração as questões sociais, ambientais e de governança das instituições. Sua execução está atrelada aos serviços ofertados pelo Sistema e seus públicos atendidos.
+            São potencializados em parceria com outras partes interessadas, fortalecendo a imagem e o protagonismo do Sistema Comércio.</p>
+    </div>
+    <div class="content-section center" style="background-color: #9ad47d30; border-radius: 50px; text-align: center;">
+        <p class="title"> Onde posso encontrar os projetos executados pelo SOMAR? </p>
+        <p style="font-size: 1.7vw; padding:20px;"> Em nossa aba de projetos, onde todos são categorizados de acordo com o Objetivo de Desenvolvimento Social em que se encaixam.</p>
+        <a href="{%url 'projects'%}"> <button class="link-button" onmousedown="changeSize(this, '65%', '10vh')" onmouseup="changeSize(this, '70%', '10vh')"> Projetos </button></a>
+    </div>
     
 </div>
 {%endblock%}
